--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -6,7 +6,7 @@
 
   section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 24px;
   }
 
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    min-width: 320px;
   }
 
 
