--- a/src/app/button-toggle/button-toggle.component.html
+++ b/src/app/button-toggle/button-toggle.component.html
@@ -32,6 +32,14 @@
             <mat-icon>hide_source</mat-icon>
             Disabled
           </mat-button-toggle>
+
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
         </mat-button-toggle-group>
       </div>
 
@@ -54,6 +62,14 @@
             <mat-icon>hide_source</mat-icon>
             Disabled
           </mat-button-toggle>
+
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
         </mat-button-toggle-group>
       </div>
 
@@ -84,6 +100,14 @@
             <mat-icon>hide_source</mat-icon>
             Disabled
           </mat-button-toggle>
+
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
         </mat-button-toggle-group>
       </div>
 
@@ -106,6 +130,14 @@
             <mat-icon>hide_source</mat-icon>
             Disabled
           </mat-button-toggle>
+
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
         </mat-button-toggle-group>
       </div>
 
@@ -176,6 +208,13 @@
             <mat-icon>not_started</mat-icon> {{ c | titlecase }}
           </mat-button-toggle>
           <mat-button-toggle value="disabled" disabled>Disabled</mat-button-toggle>
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
         </mat-button-toggle-group>
       </div>
       <div>
@@ -184,6 +223,14 @@
             <mat-icon>not_started</mat-icon> {{ c | titlecase }}
           </mat-button-toggle>
           <mat-button-toggle value="disabled" disabled>Disabled</mat-button-toggle>
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
+
         </mat-button-toggle-group>
       </div>
 
@@ -201,6 +248,15 @@
             <mat-icon>not_started</mat-icon> {{ c | titlecase }}
           </mat-button-toggle>
           <mat-button-toggle value="disabled" disabled>Disabled</mat-button-toggle>
+
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
+
         </mat-button-toggle-group>
       </div>
       <div>
@@ -209,6 +265,14 @@
             <mat-icon>not_started</mat-icon> {{ c | titlecase }}
           </mat-button-toggle>
           <mat-button-toggle value="disabled" disabled>Disabled</mat-button-toggle>
+
+          <mat-button-toggle value="text">
+            Text Only
+          </mat-button-toggle>
+          <mat-button-toggle value="icon">
+            <mat-icon>home</mat-icon>
+          </mat-button-toggle>
+
         </mat-button-toggle-group>
       </div>
 
