Add disabled slider

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -23,6 +23,16 @@
         aria-label="units"
         [color]="c"></mat-slider>
 
+      <mat-slider
+        thumbLabel
+        vertical
+        step="1"
+        value="50"
+        min="0"
+        max="100"
+        aria-label="units"
+        disabled></mat-slider>
+
     </mat-card-content>
   </mat-card>
 
