Add support for built in themes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 
-<mat-toolbar class="header mat-elevation-z5">
+<mat-toolbar class="header mat-elevation-z5" color="primary">
   <button mat-icon-button aria-label="Menu" (click)="toggleLeftMenu()">
     <mat-icon>menu</mat-icon>
   </button>
